--- a/test.yaml
+++ b/test.yaml
@@ -1,28 +1,29 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: backend-svc
-  labels:
-    name: backend-svc
 spec:
-  containers:
-    - name: backend-svc
-      image: centkanayo10/backend:1.1.1
-      ports:
-        - containerPort: 3500
+  selector:
+    matchLabels:
+      app: backend-svc
+  template:
+    metadata:
+      labels:
+        app: backend-svc
+    spec:
+      containers:
+        - name: backend-svc
+          image: centkanayo10/backend:1.1.1
+          ports:
+            - containerPort: 3500
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    name: backend-svc
   name: backend-svc
 spec:
   selector:
-    name: backend-svc
+    app: backend-svc
   ports:
-    - protocol: TCP
-      port: 3500
-      targetPort: 3500
-  type: ClusterIP
+    - port: 3500
