--- a/test2.yaml
+++ b/test2.yaml
@@ -1,28 +1,31 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: frontend
-  labels:
-    name: frontend
+  name: frontend-svc
 spec:
-  containers:
-    - name: frontend
-      image: centkanayo10/frontend:2.1.0
-      ports:
-        - containerPort: 3000
+  selector:
+    matchLabels:
+      app: frontend-svc
+  template:
+    metadata:
+      labels:
+        app: frontend-svc
+    spec:
+      containers:
+        - name: frontend-svc
+          image: centkanayo10/frontend:2.1.0
+          ports:
+            - containerPort: 3000
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    name: frontend
   name: frontend-svc
 spec:
-  selector:
-    name: frontend
-  ports:
-    - protocol: TCP
-      port: 3000
-      targetPort: 3000
   type: LoadBalancer
+  selector:
+    app: frontend-svc
+  ports:
+    - port: 3000
+      targetPort: 3000
